--- a/style.css
+++ b/style.css
@@ -69,27 +69,103 @@ body {
     font-weight: 700;
 }
 
-.market-place{
+.market-place {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
+}
+
+/* collectiom */
+.collection-section {
+    margin-top: 100px;
+}
+
+.collecton-title {
+    text-align: center;
+    color: #3A3A3A;
+    font-family: Poppins;
+    font-size: 1.75rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 4.rem;
+    /* 250% */
+    margin-bottom: 30px;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    /* width: 100%; */
+
+}
+
+.card {
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding: 15px;
+    width: 329px;
+    height: 476px;
+
 }
 
 
+.card-container .card img {
+    width: 100%;
+    height: auto;
+}
 
+.card-container .card h3 {
+    color: #18191F;
+    font-size: 1.7rem;
+    font-weight: 500;
+    line-height: 2.5rem;
+    /* 142.857% */
+    margin-top: 16px;
+    margin-bottom: 6px;
+}
+
+
+.card-container .card h4 {
+    color: rgba(0, 0, 0, 0.87);
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    /* 36px */
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+.card-container .card p {
+    max-width: 196px;
+    color: var(--gray-50, #787885);
+    font-family: Inter;
+    font-size: 0.87rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 143%;
+    /* 20.02px */
+    letter-spacing: 0.252px;
+}
 
 /* responsive */
 
 @media screen and (max-width:576px) {
-    body{
+    body {
         padding: 29px;
         text-align: center;
+        margin: auto;
     }
-    .nav-container{
+
+    .nav-container {
         flex-direction: column;
 
     }
-    .banner-container{
+
+    .banner-container {
         flex-direction: column-reverse;
         background-size: auto;
         background-position: top;
@@ -101,11 +177,23 @@ body {
         margin: 5px;
     }
 
-    .market-place{
+    .market-place {
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(4, 1fr);
         justify-content: space-between;
         align-items: center;
         gap: 10px;
+        max-width: 360px;
+        margin: auto;
+    }
+
+    .card-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+        margin: auto;
+    
+    }
+    .card{
+        margin: auto;
     }
 }
